tests/NormalTests/paczka1/small_fuzzy/81150803.err
Error in line 6: S574 S574 94,9
Error in line 8: I0On S574 58,5
Error in line 9: I0On A45 77,8
Error in line 7: S574 S31 23,9
